# curvature-transformer-bench

./: .gitignore  pyproject.toml  requirements.txt
configs/experiments/: adamw_mlp.yaml
scripts/: run_experiment.py
src/curvature_bench/: config.py  curvature.py  data.py  engine.py  metrics.py  models.py  optimizers.py  plots.py  profiling.py  registry.py
testbed/: mlp_testbed.py
